--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<div class="hero">
 		<nav>
-			<h2 class="logo">Prog<span>ramer</span></h2>
+			<h2 class="logo">Prog<span>rammer</span></h2>
 			<ul>
 				<li><a href="#home">Home</a></li>
 				<li><a href="#aboutus">About Me</a></li>
@@ -29,7 +29,7 @@
 				<li><a href="#contactus">Contact Us</a></li>
 			</ul>
 			<!-- change -->
-			<a target="_blank" href="https://www.linkedin.com/in/muzamil-gashroo-8268b4228/" class="btn">LinkedIn</a>
+			<a target="_blank" href="https://www.linkedin.com/in/muzamil-bashir-8268b4228/" class="btn">LinkedIn</a>
 		</nav>
 
 		<div class="content" id="home">
@@ -119,7 +119,7 @@
 		<div class="social" id="contactus">
 			<!-- <a href="#"><i class="fab fa-facebook-f"></i></a> -->
 			<a href="https://www.instagram.com/musaibb._/" target="_blank"><i class="fab fa-instagram"></i></a>
-			<a href="https://www.linkedin.com/in/muzamil-gashroo-8268b4228/" target="_blank"><i class="fab fa-dribbble"></i></a>
+			<a href="https://www.linkedin.com/in/muzamil-bashir-8268b4228/" target="_blank"><i class="fab fa-dribbble"></i></a>
 		</div>
 		<p class="end">CopyRight By Muzamil</p>
 	</footer>
