--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Musaib gashru-website </title>
+    <title>Muzamil Gashroo </title>
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,
@@ -83,7 +83,7 @@
 				<h5>About Me</h5>
 				<div class="pra">
 
-				<p> Hello , i am 19 year old self-taught programmer , i am from worlds most militrized area so called paradise on earth <strong>"kashmir"</strong> .i am working on and 
+				<p> Hello , i am 19 year old self-taught programmer , i am from <strong>"kashmir"</strong> .i am working on and 
 				learning web3 technology , </p>
 
 					<p style="text-align: center;">
@@ -115,7 +115,7 @@
 	<!------footer start--------->
 	<footer>
 		<p>MUZAMIL GASHRU</p>
-		<p>For more HTML, CSS, and coding tutorial - please click on the link below to subscribe to my channel:</p>
+		<p>For more HTML, CSS info,please click on the link below to visit to my social media platforms:</p>
 		<div class="social" id="contactus">
 			<!-- <a href="#"><i class="fab fa-facebook-f"></i></a> -->
 			<a href="https://www.instagram.com/musaibb._/" target="_blank"><i class="fab fa-instagram"></i></a>
