--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muzamil Gashroo </title>
-        <link rel="stylesheet" href="style.css">
+    <title>Musaib gashru-website </title>
+        <link rel="stylesheet" href="STYLE.css">
+    
         <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,
   100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
@@ -18,17 +19,17 @@
 <body>
   <!----hero Section start---->
 
-	<div class="hero">
+	 <div class="hero">
 		<nav>
-			<h2 class="logo">Prog<span>rammer</span></h2>
-			<ul>
+			<h2 class="logo">Prog<span>ramer</span></h2>
+			<!-- <ul>
 				<li><a href="#home">Home</a></li>
 				<li><a href="#aboutus">About Me</a></li>
 				<li><a href="#services">Services</a></li>
-				<!-- <li><a href="#">Skills</a></li> -->
+				<li><a href="#">Skills</a></li>
 				<li><a href="#contactus">Contact Us</a></li>
-			</ul>
-			<!-- change -->
+			</ul> -->
+           			 <!-- change --> 
 			<a target="_blank" href="https://www.linkedin.com/in/muzamil-gashroo-8268b4228/" class="btn">LinkedIn</a>
 		</nav>
 
@@ -48,14 +49,14 @@
 	<!----About section start---->
 	<section class="about" id="aboutus">
 		<div class="main">
-			<img src="ppweb4.jpg"> 
+			<!-- <img src="ppweb4.jpg">  -->
 			<div class="about-text">
 				<h2>About Me</h2>
 				<h5>Developer <span>& Designer</span></h5>
 				<p>I am a front-end web developer. I can provide clean code and pixel perfect design.
            I also make the website more & more interactive with web animations.I can provide clean code and pixel perfect design. 
            A responsive design makes your website accessible to all users, regardless of their device.</p>
-				<button type="button">Let's Talk</button>
+				<button type="button" href="mailto:Muzamilb174@email.de" >Let's Talk</button>
 			</div>
 		</div>
 	</section>
@@ -63,7 +64,7 @@
 	<!-----service section start----------->
 	<div class="service" id="services">
 		<div class="title">
-			<h2>Our Services</h2>
+			<!-- <h2>Skills</h2> -->
 		</div>
 
 		<div class="box">
@@ -78,12 +79,12 @@
 				</div>
 			</div>
 
-			<div class="card">
+			<!-- <div class="card">
 				<i class="far fa-user"></i>
 				<h5>About Me</h5>
 				<div class="pra">
 
-				<p> Hello , i am 19 year old self-taught programmer , i am from <strong>"kashmir"</strong> .i am working on and 
+				<p> Hello , i am 19 year old self-taught programmer , i am from worlds most militrized area so called paradise on earth <strong>"kashmir"</strong> .i am working on and 
 				learning web3 technology , </p>
 
 					<p style="text-align: center;">
@@ -101,25 +102,25 @@
 					<p style="text-align: center;">
 						<a class="button" href="#">Read More</a>
 					</p>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
 
 	<!------Contact Me------>
 	<div class="contact-me">
-		<p>Let Me Get You A Beautiful Website.</p>
-		<a class="button-two" href="mailto:Muzamilb174@email.de">Hire Me</a>
+		<p>Contact</p>
+		<a class="button-two" href="mailto:Muzamilb174@email.de">Tap</a>
 	</div>
 
 	<!------footer start--------->
 	<footer>
 		<p>MUZAMIL GASHRU</p>
-		<p>For more HTML, CSS info,please click on the link below to visit to my social media platforms:</p>
+		<p>Follow me on social media</p>
 		<div class="social" id="contactus">
 			<!-- <a href="#"><i class="fab fa-facebook-f"></i></a> -->
 			<a href="https://www.instagram.com/musaibb._/" target="_blank"><i class="fab fa-instagram"></i></a>
-			<a href="https://www.linkedin.com/in/muzamil-bashir-8268b4228/" target="_blank"><i class="fab fa-dribbble"></i></a>
+			<a href="https://www.linkedin.com/in/muzamil-gashroo-8268b4228/" target="_blank"><i class="fab fa-dribbble"></i></a>
 		</div>
 		<p class="end">CopyRight By Muzamil</p>
 	</footer>
