--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Musaib gashru-website </title>
+    <title>Muzamil Gashroo </title>
         <link rel="stylesheet" href="STYLE.css">
     
         <link rel="preconnect" href="https://fonts.gstatic.com">
