--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<div class="content" id="home">
 	
 			<h1>Muzamil <span>Gashru</span></h1>
-			<h3>I'm 19 year old. Web 3 Developer.</h3>
+			<h3>I'm 19 year old Developer.</h3>
 			<div class="newslatter">
 				<form>
 					<input type="email" name="email" id="mail" placeholder="Enter Your Email">
