--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muzamil Gashroo </title>
+    <title>My Portfolio </title>
         <link rel="stylesheet" href="style.css">
     
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -35,7 +35,7 @@
 
 		<div class="content" id="home">
 	
-			<h1>Muzamil <span>Gashru</span></h1>
+			<h1>Musaib <span>Gashru</span></h1>
 			<h3>I'm 19 year old Developer.</h3>
 			<div class="newslatter">
 				<form>
