--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 	<!------footer start--------->
 	<footer>
-		<p>MUZAMIL GASHRU</p>
+		<p>MUSAIB GASHRU</p>
 		<p>Follow me on social media</p>
 		<div class="social" id="contactus">
 			<!-- <a href="#"><i class="fab fa-facebook-f"></i></a> -->
