--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		<div class="social" id="contactus">
 			<!-- <a href="#"><i class="fab fa-facebook-f"></i></a> -->
 			<a href="https://www.instagram.com/musaibb._/" target="_blank"><i class="fab fa-instagram"></i></a>
-			<a href="https://www.linkedin.com/in/muzamil-gashroo-8268b4228/" target="_blank"><i class="fab fa-dribbble"></i></a>
+			<a href="https://foemusaib.github.io/bca-department/" target="_blank"><i class="fab fa-dribbble"></i></a>
 		</div>
 		<p class="end">CopyRight By Muzamil</p>
 	</footer>
