--- a/index.html
+++ b/index.html
@@ -109,10 +109,18 @@
 
 	<!------Contact Me------>
 	<div class="contact-me">
-		<p>Contact</p>
+		<p>Gmail</p>
 		<a class="button-two" href="mailto:Muzamilb174@email.de">Tap</a>
+		
+<!-- ADDED NEW DIV -->
+	</div>
+	
+	<div class="contact-me">
+		<p>My Blogs</p>
+		<a class="button-two" href="https://foemusaib.hashnode.dev/">Tap</a>
 	</div>
 
+<!-- END OF THIS -->
 	<!------footer start--------->
 	<footer>
 		<p>MUSAIB GASHRU</p>
@@ -120,7 +128,7 @@
 		<div class="social" id="contactus">
 			<!-- <a href="#"><i class="fab fa-facebook-f"></i></a> -->
 			<a href="https://www.instagram.com/musaibb._/" target="_blank"><i class="fab fa-instagram"></i></a>
-			<a href="https://foemusaib.github.io/bca-department/" target="_blank"><i class="fab fa-dribbble"></i></a>
+			<a href="https://github.com/Muzamilgashroo" target="_blank"><i class="fab fa-dribbble"></i></a>
 		</div>
 		<p class="end">CopyRight By Muzamil</p>
 	</footer>
