--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 	<!------Contact Me------>
 	<div class="contact-me">
-		<p>Gmail</p>
+		<p>Contact Me</p>
 		<a class="button-two" href="mailto:Muzamilb174@email.de">Tap</a>
 		
 <!-- ADDED NEW DIV -->
