--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<p>I am a front-end web developer. I can provide clean code and pixel perfect design.
            I also make the website more & more interactive with web animations.I can provide clean code and pixel perfect design. 
            A responsive design makes your website accessible to all users, regardless of their device.</p>
-				<button type="button" href="mailto:Muzamilb174@email.de" >Let's Talk</button>
+				<button type="button" href="https://twitter.com/muzamilgashroo" >Let's Talk</button>
 			</div>
 		</div>
 	</section>
@@ -74,7 +74,7 @@
 				<div class="pra">
 					<p> I am a self-taught programmer, i am front-end developer , i can test , modify , and build websites, i'm working on web3 technology, </p>
 					<p style="text-align: center;">
-						<a class="button" href="#">Read More</a>
+						<a class="button" href="https://foemusaib.hashnode.dev/becoming-a-developer-in-kashmir">Read More</a>
 					</p>
 				</div>
 			</div>
