--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 	
 	<div class="contact-me">
 		<p>My Blogs</p>
-		<a class="button-two" href="https://foemusaib.hashnode.dev/">Tap</a>
+		<a class="button-two" href="https://muzamilgashroo.hashnode.dev/">Tap</a>
 	</div>
 
 <!-- END OF THIS -->
