--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<div class="pra">
 					<p> I am a self-taught programmer, i am front-end developer , i can test , modify , and build websites, i'm working on web3 technology, </p>
 					<p style="text-align: center;">
-						<a class="button" href="https://foemusaib.hashnode.dev/becoming-a-developer-in-kashmir">Read More</a>
+						<a class="button" href="https://muzamilgashroo.hashnode.dev/becoming-a-developer-in-kashmir">Read More</a>
 					</p>
 				</div>
 			</div>
