--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 				<p>I am a front-end web developer. I can provide clean code and pixel perfect design.
            I also make the website more & more interactive with web animations.I can provide clean code and pixel perfect design. 
            A responsive design makes your website accessible to all users, regardless of their device.</p>
-            <!-- <button type="button" href="#" >Let's Talk</button> -->
+            <button type="button" onclick="window.location.href='https://twitter.com/muzamilgashroo'">Let's Talk</button>
+
 			</div>
 		</div>
 	</section>
