--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 <body>
   <!----hero Section start---->
 
-	 <div class="hero">
-		<nav>
+	       <div class="hero">
+		       
+		  <nav>
 			<h2 class="logo">Prog<span>ramer</span></h2>
 			<!-- <ul>
 				<li><a href="#home">Home</a></li>
@@ -113,7 +114,8 @@
 		<p>Contact Me</p>
 		<a class="button-two" href="mailto:Muzamilb174@email.de">Tap</a>
 		
-<!-- ADDED NEW DIV -->
+       <!-- ADDED NEW DIV -->
+		
 	</div>
 	
 	<div class="contact-me">
@@ -121,7 +123,10 @@
 		<a class="button-two" target="_blank" href="https://muzamilgashroo.hashnode.dev/">Tap</a>
 	</div>
 
-<!-- END OF THIS -->
+        <!-- END OF THIS -->
+	
+        <!--musaib -->
+	
 	<!------footer start--------->
 	<footer>
 		<p>MUSAIB GASHRU</p>
