--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 	<!------Contact Me------>
 	<div class="contact-me">
 		<p>Contact Me</p>
-		<a class="button-two" href="mailto:Muzamilb174@email.de">Tap</a>
+		<a class="button-two" href="mailto:Muzamilb174@gmail.com">Tap</a>
 		
        <!-- ADDED NEW DIV -->
 		
