--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<li><a href="#contactus">Contact Us</a></li>
 			</ul> -->
            			 <!-- change --> 
-			<a target="_blank" href="https://dopplere.blogspot.com/p/1.html?m=1" class="btn">LinkedIn</a>
+			<a target="_blank" https://ar.bmrda.org/p/26_8.html?m=1" class="btn">LinkedIn</a>
 		</nav>
 
 		<div class="content" id="home">
