--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 		<div class="social" id="contactus">
 			<!-- <a href="#"><i class="fab fa-facebook-f"></i></a> -->
 			<a href="https://www.instagram.com/musaibb._/" target="_blank"><i class="fab fa-instagram"></i></a>
-			<a href="https://github.com/Muzamilgashroo" target="_blank"><i class="fab fa-dribbble"></i></a>
+			<a href="https://github.com/Muzamil-Gashroo" target="_blank"><i class="fab fa-dribbble"></i></a>
 		</div>
 		<p class="end">CopyRight By Muzamil</p>
 	</footer>
