--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	       <div class="hero">
 		       
 		  <nav>
-			<h2 class="logo">Prog<span>ramer</span></h2>
+			<h2 class="logo">My<span>Portfolio</span></h2>
 			<!-- <ul>
 				<li><a href="#home">Home</a></li>
 				<li><a href="#aboutus">About Me</a></li>
